# zlib_test

./: local.properties
app/: build.gradle
app/src/androidTest/java/com/example/zlib_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/zlib_test/: MainActivity.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/include/: jpeglib.h
app/src/main/jni/src/: glzencode.c  glzencode.h
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/zlib_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
